[gd_scene load_steps=10 format=3 uid="uid://tv0fdcatn3mq"]

[ext_resource type="Texture2D" uid="uid://dw3v4woylijag" path="res://art/sprites/softblock.png" id="1_3xojh"]
[ext_resource type="Script" uid="uid://b150luuwt76j2" path="res://scenes/terrain/softblock.gd" id="1_axjqx"]
[ext_resource type="Texture2D" uid="uid://dmt5da41s3la2" path="res://art/sprites/softblock_feather.png" id="3_fkify"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gp1hp"]
size = Vector2(24, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_esxae"]
size = Vector2(18, 3)

[sub_resource type="Animation" id="Animation_8vsm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_o8sv4"]
resource_name = "crumpled"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0.5, 0.5), Vector2(-0.5, 0.5), Vector2(0.5, -0.5), Vector2(-0.5, -0.5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_usdv8"]
_data = {
&"RESET": SubResource("Animation_8vsm5"),
&"shake": SubResource("Animation_o8sv4")
}

[sub_resource type="Gradient" id="Gradient_k01i6"]
offsets = PackedFloat32Array(0, 0.896679)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Softblock" type="StaticBody2D"]
z_index = 1
collision_mask = 12
script = ExtResource("1_axjqx")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_3xojh")
hframes = 4
vframes = 2

[node name="WorldCol" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_gp1hp")

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="Col" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_esxae")
debug_color = Color(0.596143, 0, 0.7, 0.42)

[node name="AboveHitArea" type="Area2D" parent="."]
position = Vector2(0, -24)
collision_layer = 0
collision_mask = 8

[node name="Col" type="CollisionShape2D" parent="AboveHitArea"]
position = Vector2(0, 12.5)
shape = SubResource("RectangleShape2D_esxae")
debug_color = Color(0.596143, 0, 0.7, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_usdv8")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 5)
emitting = false
amount = 4
texture = ExtResource("3_fkify")
lifetime = 0.8
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(12, 8)
direction = Vector2(0, 1)
gravity = Vector2(0, 20)
angular_velocity_min = 50.0
angular_velocity_max = 100.0
scale_amount_max = 1.5
color_ramp = SubResource("Gradient_k01i6")

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
